[tool.poetry]
name = "luck"
version = "0.1.0"
description = "My awesome game!"
authors = ["Gabriel Sarmento <gabrielfs.bot@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
isort = "^5.9.3"
pre-commit = "^2.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
